# mingw-w64

./: .gitignore  AUTHORS  COPYING  DISCLAIMER.PD  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
mingw-w64-crt/: .gitignore  ChangeLog  ChangeLog-2009  ChangeLog.2009  ChangeLog.2010  ChangeLog.2011  ChangeLog.2012  DISCLAIMER  Makefile  Makefile.am  Makefile.in  aclocal.m4  atonexit.c  config.h.in  configure  configure.ac  crtdll.c  crtdll.def  crtexe.c  dirent.c  dll_argv.c  dllentry.c  dllmain.c  gccmain.c  gs_support.c  internal.h  isascii.c  iscsym.c  pesect.c  pseudo-reloc.c  revstamp.h  shell32.def  strcasecmp.c  tlssup.c  toascii.c  tstwassert.c  tstwassert_win.c  tstwinmain.c  wcscmpi.c
mingw-w64-crt/build-aux/: ar-lib  compile  config.guess  config.sub  ltmain.sh
mingw-w64-crt/cfguard/: guard_dispatch.S  mingw_cfguard_loadcfg.S  mingw_cfguard_support.c
mingw-w64-crt/complex/: cabs.c  cabsf.c  cabsl.c  cacos.c  cacosf.c  cacosh.c  cacosh.def.h  cacoshf.c  cacoshl.c  cacosl.c  carg.c  cargf.c  cargl.c  casin.c  casinf.c  casinh.c  casinh.def.h  casinhf.c  casinhl.c  casinl.c  catan.c  catanf.c  catanh.c  catanhf.c  catanhl.c  catanl.c  ccos.c  ccosf.c  ccosh.c  ccoshf.c  ccoshl.c  ccosl.c  cexp.c  cexp.def.h  cexpf.c  cexpl.c  cimag.c  cimagf.c  cimagl.c  clog.c  (+30 more)
mingw-w64-crt/crt/: CRT_fp10.c  CRT_fp8.c  CRT_glob.c  CRT_noglob.c  __imagebase.c  atonexit.c  binmode.c  charmax.c  chpe.S  cinitexe.c  crt0_c.c  crt0_w.c  crt_handler.c  crtbegin.c  crtdll.c  crtdll_compat.c  crtdll_ismbblead.c  crtend.c  crtexe.c  crtexewin.c  cxa_atexit.c  dllargv.c  dllentry.c  exit_wrappers.c  gccmain.c  gs_support.c  isascii.c  iscsym.c  iscsymf.c  loadcfg.S  merr.c  mingw_custom.c  mingw_helpers.c  msvcrt.c  msvcrt10_ismbblead.c  msvcrt20_getmainargs.c  natstart.c  pesect.c  pseudo-reloc.c  seh_signal_dispatcher.h  (+20 more)
mingw-w64-crt/crt64/: charmax.c  crt0_c.c  crt0_w.c  crtdll.c  crtexe.c  dirent.c  ftruncate.c  gccmain.c  gs_support.c  mingw_helpers.c  moldname-msvcrt.def  msvcrt.def  natstart.c  pesect.c  pseudo-reloc.c  shell32.def
mingw-w64-crt/ctype/: __iswcsymf.c  __pctype_func.c  _iscsymf_l.c  _ispunct_l.c  _iswblank_l.c  isblank.c  isprint.c  iswctype.c  towctrans.c
mingw-w64-crt/def-include/: crt-aliases.def.in  func.def.in  msvcrt-common.def.in
mingw-w64-crt/gdtoa/: README  README.mingw  dmisc.c  dtoa.c  g__fmt.c  g_dfmt.c  g_ffmt.c  g_xfmt.c  gd_arith.h  gd_qnan.h  gdtoa.c  gdtoa.h  gdtoaimp.h  gethex.c  hexnan.c  mingw_snprintf.c  misc.c  qnan.c  smisc.c  strtodg.c  strtodnrp.c  strtof.c  strtopx.c  ulp.c
mingw-w64-crt/include/: filetime_to_time64.h  internal.h  mingw-wchar.h  msvcrt.h  msvcrt_or_emu_glue.h  sect_attribs.h
mingw-w64-crt/include64/: oscalls.h  sect_attribs.h
mingw-w64-crt/intrincs/: __faststorefence.c  __int2c.c  __movsb.c  __movsd.c  __movsq.c  __movsw.c  __shiftleft128.c  __shiftright128.c  __stosb.c  __stosd.c  __stosq.c  __stosw.c  _mul128.c  _rotl64.c  _rotr64.c  _umul128.c  bitscanfwd.c  bitscanfwd64.c  bitscanrev.c  bitscanrev64.c  bittest.c  bittest64.c  bittestc.c  bittestc64.c  bittestci.c  bittestci64.c  bittestr.c  bittestr64.c  bittestri.c  bittestri64.c  bittests.c  bittests64.c  bittestsi.c  bittestsi64.c  cpuid.c  currentfiber.c  currentteb.c  dbgassert.c  fiberdata.c  ilockadd.c  (+68 more)
mingw-w64-crt/lib/: PS5UI.def  UNIDRV.def  adsmsext.def  advpack.def  agentsr.def  asycfilt.def  atmpvcno.def  azroles.def  bnts.def  brpinfo.def  btpanui.def  catsrv.def  catsrvut.def  chsbrkr.def  chtskdic.def  clbcatex.def  cmcfg32.def  comadmin.def  comcat.def  controt.def  danim.def  dbghelp.def  dfrgui.def  dimsntfy.def  dinput.def  dispex.def  dmconfig.def  dmdlgs.def  dmserver.def  dsound3d.def  dsquery.def  eventcls.def  fcachdll.def  fldrclnr.def  fsusd.def  ftpmib.def  ftpsvc2.def  fwcfg.def  fxscomex.def  fxsdrv.def  (+333 more)
mingw-w64-crt/lib-common/: advapi32.def.in  advapi32_onecore.def  api-ms-win-appmodel-runtime-l1-1-0.def  api-ms-win-appmodel-runtime-l1-1-1.def  api-ms-win-core-com-l1-1-1.def  api-ms-win-core-com-l1-1-1_windowsapp.def  api-ms-win-core-comm-l1-1-0.def  api-ms-win-core-console-l1-1-0.def  api-ms-win-core-console-l1-2-0.def  api-ms-win-core-console-l2-1-0.def  api-ms-win-core-console-l2-2-0.def  api-ms-win-core-datetime-l1-1-0.def  api-ms-win-core-datetime-l1-1-1.def  api-ms-win-core-datetime-l1-1-2.def  api-ms-win-core-debug-l1-1-1.def  api-ms-win-core-errorhandling-l1-1-0.def  api-ms-win-core-errorhandling-l1-1-1.def  api-ms-win-core-errorhandling-l1-1-1_windowsapp.def  api-ms-win-core-errorhandling-l1-1-3.def  api-ms-win-core-file-ansi-l1-1-0.def  api-ms-win-core-file-ansi-l2-1-0.def  api-ms-win-core-file-l1-1-0.def  api-ms-win-core-file-l1-1-0_windowsapp.def  api-ms-win-core-file-l1-2-0.def  api-ms-win-core-file-l1-2-1.def  api-ms-win-core-file-l1-2-2.def  api-ms-win-core-file-l1-2-2_windowsapp.def  api-ms-win-core-file-l2-1-0.def  api-ms-win-core-file-l2-1-1.def  api-ms-win-core-file-l2-1-2.def  api-ms-win-core-heap-l1-1-0.def  api-ms-win-core-heap-l1-2-0.def  api-ms-win-core-heap-obsolete-l1-1-0.def  api-ms-win-core-interlocked-l1-2-0.def  api-ms-win-core-io-l1-1-0.def  api-ms-win-core-io-l1-1-1.def  api-ms-win-core-kernel32-legacy-l1-1-0.def  api-ms-win-core-kernel32-legacy-l1-1-1.def  api-ms-win-core-libraryloader-l1-2-0.def  api-ms-win-core-libraryloader-l1-2-1.def  (+197 more)
mingw-w64-crt/lib32/: ChangeLog.2012  ChangeLog.2013  Makefile.am  advapi32.def  advapi32_onecore.def  api-ms-win-appmodel-runtime-l1-1-0.def  api-ms-win-appmodel-runtime-l1-1-1.def  api-ms-win-core-com-l1-1-0.def  api-ms-win-core-com-l1-1-1.def  api-ms-win-core-com-l2-1-1.def  api-ms-win-core-com-midlproxystub-l1-1-0.def  api-ms-win-core-comm-l1-1-0.def  api-ms-win-core-comm-l1-1-1.def  api-ms-win-core-comm-l1-1-2.def  api-ms-win-core-console-l1-1-0.def  api-ms-win-core-console-l1-2-0.def  api-ms-win-core-console-l2-1-0.def  api-ms-win-core-console-l2-2-0.def  api-ms-win-core-file-l1-1-0.def  (+292 more)
mingw-w64-headers/: .gitignore  ChangeLog  ChangeLog-2009  ChangeLog.2013  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  wine-import.sh
(+5229 files in other folders)
